tests/baselines/reference/reassignStaticProp.errors.txt
tests/cases/compiler/reassignStaticProp.ts(5,12): error TS2300: Duplicate identifier 'bar'.


==== tests/cases/compiler/reassignStaticProp.ts (1 errors) ====
    class foo {
     
        static bar = 1;
     
        static bar:string; // errror - duplicate id
               ~~~
!!! error TS2300: Duplicate identifier 'bar'.
     
    }
     
     
    
    